--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
  * @Autor: xiaoyaozi
  * @Date: 2020-07-29 14:58:54
  * @LastEditors: Pony
- * @LastEditTime: 2020-08-20 12:12:45
+ * @LastEditTime: 2020-08-23 23:06:10
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -43,7 +43,75 @@
     ::-webkit-scrollbar-corner {
       background: #022a51;
     }
-  
+    * {
+      padding: 0;
+      margin: 0;
+      list-style: none;
+    }
+    .container {
+      width: 100%;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      background: linear-gradient(143deg, rgba(48, 121, 200, 1), rgba(60, 82, 178, 1))
+    }
+    svg {
+      width: 0;
+      height: 0;
+    }
+
+    .loader {
+      position: relative;
+      width: 200px;
+      height: 200px;
+      filter: url(#gooey);
+    }
+
+    .loader span {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: block;
+      animation: animate 4s ease-in-out infinite;
+      animation-delay: calc(0.2s * var(--i));
+    }
+
+    .loader span:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: calc(50% - 20px);
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      box-shadow: 0 0 30px #03a9f4;
+      background: linear-gradient(#fce4ec, #03a9f4);
+    }
+
+    i.loadingTitle {
+      color: #fff;
+      font-size: 16px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      opacity: 1;
+      transform: translate(-50%, -50%);
+    }
+
+    @keyframes animate {
+      0% {
+        transform: rotate(0deg);
+      }
+
+      50%,
+      100% {
+        transform: rotate(360deg);
+      }
+    }
   </style>
   <!-- <script type="text/javascript" charset="utf-8"
     src="https://files.cnblogs.com/files/liuzhou1/L2Dwidget.0.min.js"></script>
@@ -74,7 +142,7 @@
         "opacityOnHover": 1
       }
     });
- 
+
   </script>
 </head>
 
@@ -83,7 +151,32 @@
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
       Please enable it to continue.</strong>
   </noscript>
-  <div id="app"></div>
+  <div id="app">
+    <div class="container">
+      <div class="loader">
+        <span style="--i:1;"></span>
+        <span style="--i:2;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:4;"></span>
+        <span style="--i:5;"></span>
+        <span style="--i:6;"></span>
+        <span style="--i:7;"></span>
+
+      </div>
+      <i class="loadingTitle">loading...</i>
+      <svg>
+        <filter id="gooey">
+          <feGaussianBlur in="SourceGraphic" stdDeviation="10" />
+          <feColorMatrix values="
+                    1 0 0 0 0
+                    0 1 0 0 0
+                    0 0 1 0 0
+                    0 0 0 20 -10
+                " />
+        </filter>
+      </svg>
+    </div>
+  </div>
   <!-- built files will be auto injected -->
   <!-- 点击出富强民主效果 -->
   <script>
@@ -92,7 +185,7 @@
     jQuery(document).ready(function ($) {
       $("body").click(function (e) {
         var a = new Array("❤富强❤", "❤民主❤", "❤和谐❤", "❤文明❤", "❤自由❤", "❤平等❤", "❤公正❤", "❤法治❤",
-          "❤爱国❤", "❤敬业❤", "❤诚信❤", "❤友善❤","Pony");
+          "❤爱国❤", "❤敬业❤", "❤诚信❤", "❤友善❤", "Pony");
         var $i = $("<span></span>").text(a[a_idx]);
         a_idx = (a_idx + 1) % a.length;
         var x = e.pageX,
